# 1_log_parser

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  run.py
config/: config.yaml
src/: app.py  interfaces.py  logger.py  parse_utils.py  url_stat.py  utils.py
tests/: app_test.py  parse_utils_test.py  utils_test.py
